[package]
name = "rsyesql"
version = "0.2.1"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fanatid/rsyesql"
description = """
Transform SQL queries text to Rust strings.
"""
categories = ["database"]
keywords = ["sql", "yesql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.3.2"
lazy_static = "1.4.0"
quick-error = "1.2.3"
regex = "1"
