[package]
name = "rsyesql"
version = "0.3.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"
description = """
Transform SQL queries text to Rust strings.
"""
documentation = "https://docs.rs/rsyesql/"
readme = "README.md"
repository = "https://github.com/fanatid/rsyesql"
license = "MIT"
keywords = ["sql", "yesql"]
categories = ["database"]
include = [
    "src/*.rs",
    "LICENSE",
    "README.md",
]

[badges]
github = { repository = "fanatid/rsyesql", workflow = "ci" }

[dependencies]
indexmap = "1.3.2"
lazy_static = "1.4.0"
quick-error = "1.2.3"
regex = "1"
